# Excellm

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/excelmd/: __init__.py  api.py  cli.py  model.py  render_html.py  render_markdown.py
src/excelmd/parser/: __init__.py  drawing.py  namespaces.py  ooxml.py  regions.py  utils.py
tests/: __init__.py  conftest.py  helpers.py
tests/golden/: design.sha256  flow.sha256  screen_list.sha256
tests/integration/: test_end_to_end.py  test_snapshot_and_coverage.py
tests/unit/: test_drawing_connector.py  test_formula_merge_style.py  test_shared_strings.py  test_unsupported.py  test_utils.py
